messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app_blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging_app
      version: blue
  template:
    metadata:
      labels:
        app: messaging_app
        version: blue
    spec:
      containers:
      - name: messaging_app_blue_container
        image: messaging_app-image:blue
        ports:
        - containerPort: 8000
