messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app_green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging_app
      version: green
  template:
    metadata:
      labels:
        app: messaging_app
        version: green
    spec:
      containers:
      - name: messaging_app_green_container
        image: messaging_app-image:green
        ports:
        - containerPort: 8000
